--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </style>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.7.13"></script>
     <script src="https://unpkg.com/vue-silentbox@2.3.1/dist/vue-silentbox.min.js"></script>
-    <title>The_Gallery</title>
+    <title>The_Gallery!</title>
   </head>
   <body>
     <div id="app">
@@ -31,7 +31,7 @@
         el: "#app",
         data() {
           return {
-            callToAction: "Submit photos of your favourite things eg. (footballers, cars, or even anime characters)!",
+            callToAction: "Submit photos of your favourite things eg. (footballers, cars, or even anime characters)! ",
             gallery: [],
           };
         },
